--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3000
 DB_CNN = mongodb+srv://mean_user:isxL3k5MPbc5DKNi@cluster0.46r0b.mongodb.net/hospitaldb
+JWT_SECRET=D140/1@RRE@Za\1997blond@/GoRD@
