--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT = 3000
 DB_CNN = mongodb+srv://mean_user:isxL3k5MPbc5DKNi@cluster0.46r0b.mongodb.net/hospitaldb
 JWT_SECRET=D140/1@RRE@Za\1997blond@/GoRD@
+
+GOOGLE_ID=597752500350-rbgsh2li8ujs7almqbko67pvbs3ja1qr.apps.googleusercontent.com
+GOOGLE_SECRET=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
