--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 node_modules/
+
+uploads/hospitales/**.jpg
+uploads/hospitales/**.png
+uploads/hospitales/**.git
+
+uploads/medicos/**.jpg
+uploads/medicos/**.png
+uploads/medicos/**.git
+
+uploads/usuarios/**.jpg
+uploads/usuarios/**.png
+uploads/usuarios/**.git
